RESOLVED FIXED268893
REGRESSION (262120@main): Frequent assertions with Unified PDF enabled or DOMGPUP disabled
https://bugs.webkit.org/show_bug.cgi?id=268893
Summary REGRESSION (262120@main): Frequent assertions with Unified PDF enabled or DOM...
Tim Horton
Reported 2024-02-06 22:07:54 PST
REGRESSION (262120@main): Frequent assertions with Unified PDF enabled or DOMGPUP disabled
Attachments
Tim Horton
Comment 1 2024-02-06 22:09:32 PST
EWS
Comment 2 2024-02-06 23:21:20 PST
Committed 274200@main (eb1d01ca7f48): <https://commits.webkit.org/274200@main> Reviewed commits have been landed. Closing PR #23984 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-06 23:22:18 PST
Note You need to log in before you can comment on or make changes to this bug.