REGRESSION (262120@main): Frequent assertions with Unified PDF enabled or DOMGPUP disabled https://bugs.webkit.org/show_bug.cgi?id=268893

Reviewed by Simon Fraser.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithInProcessRenderingBackingStore.mm:
(WebKit::RemoteLayerWithInProcessRenderingBackingStore::prepareToDisplay):
262120@main added layers that don't need display to the set that get prepared,
in the case where they came back from being unparented. Remove this assertion
(which only exists in the in-process case) which is now invalid.

Canonical link: https://commits.webkit.org/274200@main